--- a/.env.copy
+++ b/.env.copy
@@ -1,9 +1,25 @@
+#DOCKER STAGE
+STAGE=
+
+#APP OPTIONS
 APP_PORT=
 APP_DB_CONNECTION=
+
+
+#DB OPTIONS
 DB_HOST=
 DB_NAME=
 DB_USERNAME=
 DB_PASSWORD=
-DB_PORT = 
-DB_LOGGING = 
-DB_MIGRATIONS_TABLE = 
+DB_PORT= 
+
+#TYPEORM OPTIONS
+DB_LOGGING=
+DB_MIGRATIONS_TABLE=
+
+JWT_SECRET=
+
+#NODEMAILER
+NODEMAILER_HOST=
+
+
