--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "handlebars": "^4.7.7",
+    "facturapi": "^3.3.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
