--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "handlebars": "^4.7.7",
-    "facturapi": "^3.3.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
@@ -54,6 +54,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
