--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -9,7 +9,7 @@ jobs:
 
   build:
     name: Build image 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
 
@@ -35,5 +35,8 @@ jobs:
         REPOSITORY: factuapp
         IMAGE_TAG: ${{ github.sha }}
       run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker build -t $REGISTRY/$REPOSITORY:test-$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+
+    - name: Creating a Folder
+      run: mkdir foldertest
