--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -7,10 +7,42 @@ on:
 
 jobs:
 
-  testing:
-    name: testing ec2
+  build:
+    name: Build image 
     runs-on: self-hosted
 
     steps:
-      - name: Creating a folder
-        run: mkdir ~/testing
+
+    - name: Checkout repo
+      uses: actions/checkout@v3
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2 # More information on this action can be found below in the 'AWS Credentials' section
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-2
+        # role-to-assume: arn:aws:iam::123456789012:role/my-github-actions-role
+        # aws-acces
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push docker image to Amazon ECR
+      env:
+        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REPOSITORY: factuapp
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+          docker build -t $REGISTRY/$REPOSITORY:test-$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+
+  deployment:
+    name: Deployment of the proyect
+    runs-on: self-hosted
+
+    steps:
+      - name: deploying
+        run: |
+            sudo docker pull $REGISTRY/$REPOSITORY:test-$IMAGE_TAG
