--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,5 +35,5 @@ jobs:
         REPOSITORY: factuapp
         IMAGE_TAG: ${{ github.sha }}
       run: |
-          docker build -t $REGISTRY/$REPOSITORY:test-$IMAGE_TAG .
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
