--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -50,4 +50,4 @@ jobs:
             cd ~/Docker-qa
             mkdir testing
             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 311562728718.dkr.ecr.us-east-2.amazonaws.com
-            sudo TAG="$IMAGE_TAG" docker-compose -f docker-compose.yml up -d
+            sudo TAG="$IMAGE_TAG" docker compose -f docker-compose.yml up -d
