--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -49,5 +49,5 @@ jobs:
         run: |
             cd ~/Docker-qa
             mkdir testing
-            aws ecr-public get-login-password --region us-east-2 | docker login --username AWS --password-stdin public.ecr.aws/q6u1y6s3
+            aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 311562728718.dkr.ecr.us-east-2.amazonaws.com
             sudo TAG="$IMAGE_TAG" docker compose -f docker-compose.yml up -d
