--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,5 +17,5 @@ jobs:
         IMAGE_TAG: ${{ github.sha }}
         
       run: |
-        docker compose -f docker-compose.prod.yml build 
+        STAGE="prod" APP_PORT=3000 docker compose -f docker-compose.prod.yml build 
         docker push $DOCKERHUB_USERNAME/jimloza/factuapp-qa:$IMAGE_TAG
