--- a/.github/workflows/CI/CD.yml
+++ b/.github/workflows/CI/CD.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
         STAGE="prod" APP_PORT=3000 docker compose -f docker-compose.prod.yml build 
-        docker push $DOCKERHUB_USERNAME/factuapp-qa:$IMAGE_TAG
+        docker push $DOCKERHUB_USERNAME/factuapp-qa:qa-$IMAGE_TAG
 
   deploying: 
     needs: ci
@@ -30,6 +30,9 @@ jobs:
     - name: deploying
       env:
         IMAGE_TAG: ${{ github.sha }}
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}
       run: |
         cd ~/Docker-qa
-        IMAGE_TAG=$IMAGE_TAG sudo docker compose -f docker-compose.prod.yml up -d
+        docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
+        sudo IMAGE_TAG="qa-$IMAGE_TAG" docker compose -f docker-compose.prod.yml up -d
