--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   hello_world: 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Echo message
         run: echo "Hola Jim"
