--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -4,6 +4,24 @@ on:
       - ci-gh
 
 jobs:
+  
+  build: 
+    name: Build image and push to DockerHub
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Building image and pushing to DockerHub
+      env: 
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+        IMAGE_TAG: ${{ github.sha }}
+        
+      run: |
+        docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
+        STAGE="prod" IMAGE_TAG="qa-$IMAGE_TAG" APP_PORT=3000 docker compose -f docker-compose.prod.yml build 
+        docker push $DOCKERHUB_USERNAME/factuapp-qa:qa-$IMAGE_TAG
+
 
   deploying: 
     needs: build
@@ -12,5 +30,15 @@ jobs:
 
     steps:
     - name: Login to dockerhub
+      env:
+        DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKERHUB_TOKEN: ${{ secrets.DOCKER_TOKEN }}
       run: |
-          echo "Corriendo"
+        docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_TOKEN
+
+    - name: deploying
+      env:
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+          cd ~/Docker-qa
+          sudo IMAGE_TAG="qa-$IMAGE_TAG" docker compose -f docker-compose.prod.yml up -d
