--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -16,7 +16,7 @@ jobs:
           aws_default_region: us-east-2
 
           #tf_stack_destroy: true # This is to destroy the stack
-          tf_state_bucket_destroy: true # Will only destroy the bucket if tf_stack_destroy is true
+          #   tf_state_bucket_destroy: true # Will only destroy the bucket if tf_stack_destroy is true
 
           aws_ecs_task_cpu: 256
           aws_ecs_task_mem: 512
