--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -1,27 +1,21 @@
-name: Deploy ECS Cluster
 on:
   push:
-    branches: [cicd-ecs]
+    branches:
+      - cicd-ecs
+
 jobs:
-  deploy-ecs:
+  build:
     runs-on: ubuntu-latest
+    name: Build and push to ECR
 
     steps:
-      - name: Create Nginx example
-        uses: bitovi/github-actions-deploy-ecs@v0.1.2
-        id: ecs
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_default_region: us-east-2
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
 
-          #tf_stack_destroy: true # This is to destroy the stack
-          #   tf_state_bucket_destroy: true # Will only destroy the bucket if tf_stack_destroy is true
-
-          aws_ecs_task_cpu: 256
-          aws_ecs_task_mem: 512
-          aws_ecs_app_image: nginx:latest
-          aws_ecs_assign_public_ip: true
-
-          aws_ecs_container_port: 80
-          aws_ecs_lb_port: 8000
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
