testing pushing to ecr 6

--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -31,5 +31,5 @@ jobs:
           # push it to ECR so that it can
           # be deployed to ECS.
           echo pwd
-          STAGE="prod" APP_PORT=3001 docker-compose -f ./docker-compose.prod.yml build
+          STAGE="prod" APP_PORT=3001 docker-compose -f docker-compose.prod.yml build
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
