--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -33,11 +33,5 @@ jobs:
             # be deployed to ECS.
             echo pwd
             STAGE="prod" IMAGE_TAG=$IMAGE_TAG APP_PORT=3001 docker-compose -f docker-compose.prod.yml build
-            echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-        # run: |
-        #   # Build a docker container and
-        #   # push it to ECR so that it can
-        #   # be deployed to ECS.
-        #   echo pwd
-        #   STAGE="prod" APP_PORT=3001 docker-compose -f docker-compose.prod.yml build
-        #   echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
