--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -20,7 +20,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Build, and push image to Amazon ECR
         uses: actions/checkout@v2
         id: build-image
         env:
@@ -31,8 +31,7 @@ jobs:
             # Build a docker container and
             # push it to ECR so that it can
             # be deployed to ECS.
-            echo pwd
             STAGE="prod" IMAGE_TAG=$IMAGE_TAG APP_PORT=3001 docker-compose -f docker-compose.prod.yml build
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            echo Outputting image definition to $GITHUB_OUTPUT
+            echo >> REG: $ECR_REGISTRY
             echo  image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
