--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -32,6 +32,6 @@ jobs:
             # push it to ECR so that it can
             # be deployed to ECS.
             STAGE="prod" IMAGE_TAG=$IMAGE_TAG APP_PORT=3001 docker-compose -f docker-compose.prod.yml build
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-            echo >> REG: $ECR_REGISTRY
-            echo  image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+            docker push 311562728718.dkr.ecr.us-east-2.amazonaws.com/factu-api:$IMAGE_TAG
+            # echo >> REG: $ECR_REGISTRY
+            # echo  image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
