--- a/.github/workflows/testing/aws.yml
+++ b/.github/workflows/testing/aws.yml
@@ -1,51 +1,49 @@
-# name: Building image and deploying tu EC2
+name: Building image and deploying tu EC2
 
-# on:
-#   push:
-#     branches:
-#       - ci-gh
+on:
+  push:
+    branches:
+      - ci-gh
 
-# jobs:
+jobs:
+  build:
+    name: Build image
+    runs-on: ubuntu-latest
 
-#   build:
-#     name: Build image
-#     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-#     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2 # More information on this action can be found below in the 'AWS Credentials' section
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+          # role-to-assume: arn:aws:iam::123456789012:role/my-github-actions-role
+          # aws-acces
 
-#     - name: Checkout repo
-#       uses: actions/checkout@v3
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-#     - name: Configure AWS credentials
-#       uses: aws-actions/configure-aws-credentials@v2 # More information on this action can be found below in the 'AWS Credentials' section
-#       with:
-#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#         aws-region: us-east-2
-#         # role-to-assume: arn:aws:iam::123456789012:role/my-github-actions-role
-#         # aws-acces
+      - name: Build, tag, and push docker image to Amazon ECR
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: factuapp
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-#     - name: Login to Amazon ECR
-#       id: login-ecr
-#       uses: aws-actions/amazon-ecr-login@v1
+  deploying:
+    needs: build
+    name: Deploying to EC2
+    runs-on: self-hosted
 
-#     - name: Build, tag, and push docker image to Amazon ECR
-#       env:
-#         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-#         REPOSITORY: factuapp
-#         IMAGE_TAG: ${{ github.sha }}
-#       run: |
-#           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-#           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-
-#   deploying:
-#     needs: build
-#     name: Deploying to EC2
-#     runs-on: self-hosted
-
-#     steps:
-#       - name: deploying
-#         run: |
-#             cd ~/Docker-qa
-#             aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 311562728718.dkr.ecr.us-east-2.amazonaws.com
-#             sudo TAG="$IMAGE_TAG" docker-compose -f docker-compose.prod.yml up -d
+    steps:
+      - name: deploying
+        run: |
+          cd ~/Docker-qa
+          aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 311562728718.dkr.ecr.us-east-2.amazonaws.com
+          sudo TAG="$IMAGE_TAG" docker-compose -f docker-compose.prod.yml up -d
