--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -27,7 +27,7 @@ jobs:
           ECR_REPOSITORY: factu-api
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          STAGE="prod" IMAGE_TAG=$IMAGE_TAG APP_PORT=3001 docker-compose -f docker-compose.prod.yml build
+          STAGE="prod" IMAGE_TAG=$IMAGE_TAG ECR_REGISTRY=$ECR_REGISTRY APP_PORT=3001 docker-compose -f docker-compose.prod.yml build
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo >> REG: $ECR_REGISTRY
           echo  image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
