--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,15 +1,14 @@
 version: '3'
 
 services:
-
-  app: 
-    build: 
+  app:
+    build:
       context: .
       target: ${STAGE}
       dockerfile: Dockerfile
-    
+
     container_name: factu-qa-app
-    image: jimloza/factuapp-qa:${IMAGE_TAG}
+    image: factu-api:${IMAGE_TAG}
     ports:
       - ${APP_PORT}:${APP_PORT}
 
