--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile
 
     container_name: factu-qa-app
-    image: factu-api:${IMAGE_TAG}
+    image: ${ECR_REGISTRY}/factu-api:${IMAGE_TAG}
     ports:
       - ${APP_PORT}:${APP_PORT}
 
