--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -29,5 +29,5 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           STAGE="prod" IMAGE_TAG=$IMAGE_TAG ECR_REGISTRY=$ECR_REGISTRY APP_PORT=3001 docker-compose -f docker-compose.prod.yml build
-          echo  "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          echo  "image=$ECR_REGISTRY/$ECR_REPOSITORY:qa-$IMAGE_TAG" >> $GITHUB_OUTPUT
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
