--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -32,13 +32,18 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:qa-$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:qa-$IMAGE_TAG" >> $GITHUB_OUTPUT
 
+  deploy:
+    runs-on: ubuntu-latest
+    name: Deploy to Amazon ECS
+    needs: build
+    steps:
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
           container-name: my-container
-          image: ${{ steps.build-image.outputs.image }}
+          image: ${{ job.status.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
