--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build and push to ECR
+    outputs:
+      image: ${{ steps.build-and-push.outputs.image }}
 
     steps:
       - name: Configure AWS credentials
@@ -23,6 +25,7 @@ jobs:
       - uses: actions/checkout@v2
         id: build-image
       - name: Build and push to Amazon ECR
+        id: build-and-push
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: factu-api
@@ -42,8 +45,8 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
-          container-name: my-container
-          image: ${{ job.status.outputs.image }}
+          container-name: my-test-container
+          image: ${{ needs.build.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
