Testing deploy to ecs 13

--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -41,6 +41,7 @@ jobs:
     name: Deploy to Amazon ECS
     needs: build
     steps:
+      - uses: actions/checkout@v2
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
