--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -49,8 +49,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: Download task definition
-        run: aws ecs describe-task-definition --task-definition my-task-definition-family --query taskDefinition > task-definition.json
+      # - name: Download task definition
+      #   run: aws ecs describe-task-definition --task-definition my-task-definition-family --query taskDefinition > task-definition.json
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
