--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -41,7 +41,7 @@ jobs:
     name: Deploy to Amazon ECS
     needs: build
     steps:
-      - uses: actions/checkout@v2
+      # - uses: actions/checkout@v2
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -49,8 +49,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      # - name: Download task definition
-      #   run: aws ecs describe-task-definition --task-definition my-task-definition-family --query taskDefinition > task-definition.json
+      - name: Download task definition
+        run: aws ecs describe-task-definition --task-definition em-api --query taskDefinition > task-definition.json
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
