testing deploy tu ecs 30

--- a/.github/workflows/deploy-ecs.yml
+++ b/.github/workflows/deploy-ecs.yml
@@ -67,7 +67,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
-          container-name: my-test-container
+          container-name: em-api
           image: ${{ needs.build.outputs.image }}
 
       - name: Deploy Amazon ECS task definition
